  * t/025_logging.t: Improve syslog detection in the test environment.
  * pg_upgradecluster, t/030_errors.t: Unbreak after we changed the old=new
    error message.
  * PgCommon.pm: make read_cluster_conf_file read postgresql.auto.conf as well
    (Closes: #787154)
  * pg_upgradecluster: Support upgrading tablespaces. (Closes: #772202)
  * t/040_upgrade.t: Skip testing pg_upgrade with datallowconn = f, it does
    not support that anymore as of May 2015.
  * t/170_extensions.t: Catch warning with chkpass >= 9.5.
  * debian/maintscripts-functions: Unset all locale-specific environment
    variables when creating the initial database cluster. (Closes: #791526)
  * Add /var/log/postgresql to /usr/lib/tmpfiles.d/postgresql.conf.
  * Also set OOMScoreAdjust in postgresql@.service.

  [ Martin Pitt ]
  * pg_createcluster: Show the locale selected with --locale instead of the
    current one. (LP: #1467061)

 -- Christoph Berg <christoph.berg@credativ.de>  Mon, 07 Sep 2015 17:08:38 +0200

postgresql-common (169) unstable; urgency=medium

  * t/022_recovery.t: New recovery tests to catch regression in 9.4.2 and
    9.1.16.
  * pg_upgradecluster: Set default dynamic_shared_memory_type = mmap.
    (Closes: #784005)
  * pg_upgradecluster: Complain if --link is used without --method=upgrade.
  * pg_upgradecluster: Better error message when old and new version are
    equal.

 -- Christoph Berg <myon@debian.org>  Thu, 04 Jun 2015 12:09:53 +0200

postgresql-common (168) unstable; urgency=medium

  [ Martin Pitt ]
  * Drop obsolete debian/backport-ppa script.
  * debian/tests/default-psql: Skip test if default cluster creation is
    disabled in createcluster.conf.

  [ Christoph Berg ]
  * t/170_extensions.t: Refactor dependency handling and add new extensions
    shipped with 9.5.

 -- Christoph Berg <christoph.berg@credativ.de>  Thu, 21 May 2015 11:28:45 +0200

postgresql-common (167) unstable; urgency=medium

  [ Christoph Berg ]