@@ -1,7 +1,7 @@
-# Common functionality for postgresql-common selftests
+# Common functionality for postgresql-common self tests
 #
 # (C) 2005-2009 Martin Pitt <mpitt@debian.org>
-# (C) 2013 Christoph Berg <myon@debian.org>
+# (C) 2013-2015 Christoph Berg <myon@debian.org>
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -22,7 +22,8 @@ use PgCommon qw/get_versions change_ugid/;
 our $VERSION = 1.00;
 our @ISA = ('Exporter');
 our @EXPORT = qw/ps ok_dir exec_as deb_installed rpm_installed package_version
-    version_ge is_program_out like_program_out unlike_program_out pidof pid_env check_clean
+    version_ge program_ok is_program_out like_program_out unlike_program_out
+    pidof pid_env check_clean
     @ALL_MAJORS @MAJORS $delay/;
 
 our @ALL_MAJORS = sort (get_versions()); # not affected by PG_VERSIONS/-v
@@ -170,11 +171,18 @@ sub exec_as {
     $_[2] = \$out;
 
     if (defined $_[3] && $_[3] != $result) {
-        print "command '$_[1]' did not exit with expected code $_[3]:\n";
+        print "command '$_[1]' did not exit with expected code $_[3] but with $result:\n";
         print $out;
         fail_debug;
     }
     return $result;
+}
+
+# Execute a command as a particular user, and check the exit code
+# Arguments: <user> <command> <expected exit code> [<description>]
+sub program_ok {
+    my $outref;
+    ok ((exec_as $_[0], $_[1], $outref, $_[2]) == 0, $_[3] || $_[1]);
 }
 
 # Execute a command as a particular user, and check the exit code and output
