@@ -12,6 +12,7 @@ postgresql-common (170) UNRELEASED; urgency=medium
   * PgCommon.pm: make read_cluster_conf_file read postgresql.auto.conf as well
     (Closes: #787154)
   * pg_upgradecluster: Support upgrading tablespaces. (Closes: #772202)
+  * t/TestLib.pm: New function program_ok().
   * t/040_upgrade.t: Skip testing pg_upgrade with datallowconn = f, it does
     not support that anymore as of May 2015.
   * t/170_extensions.t: Catch warning with chkpass >= 9.5.
